Add color customization
Basically replacing the fixed assets with css. No visual changes.

--- a/Railway/cinnamon/scss/base/_options.scss
+++ b/Railway/cinnamon/scss/base/_options.scss
@@ -1,1 +1,15 @@
-$menu-style: "railway"
+/* Menu style
+ * common: like any other popup menus
+ * default: a more stylized menu
+ */
+$menu-style: "default";
+
+/* Main theme color.
+ * Comment/uncomment to change it or add your own.
+ */
+$theme-color: #4a85c6;		// Blue
+//$theme-color: #5abb8c;	// Green
+//$theme-color: #212121;	// Black
+
+/* Whether to have opaque menus or not */
+$opaque-menus: false;
