--- a/Railway/cinnamon/scss/main/controls/_slider.scss
+++ b/Railway/cinnamon/scss/main/controls/_slider.scss
@@ -6,7 +6,7 @@
 	height: 16px;
 	min-width: 15em;
 	-slider-height: 6px;
-	-slider-background-color: $border-shape;
+	-slider-background-color: $border-element;
 	-slider-active-background-color: $accent-primary;
 	-slider-border-color: transparent;
 	-slider-active-border-color: transparent;
