--- a/Railway/cinnamon/scss/third-party__applets/_slingshot.scss
+++ b/Railway/cinnamon/scss/third-party__applets/_slingshot.scss
@@ -9,7 +9,7 @@
 
 /* Separator */
 .slingshot .separator {
-	background-color: $border-shape;
+	background-color: $border-element;
 }
 
 /* Entry */
