--- a/Railway/cinnamon/scss/third-party__applets/_stopwatch.scss
+++ b/Railway/cinnamon/scss/third-party__applets/_stopwatch.scss
@@ -23,5 +23,5 @@
 	}
 }
 
-.stopwatch-ready * { color: $text-secondary-invert; }
-.stopwatch-ready:hover * { color: $text-primary-invert; }
+.stopwatch-ready * { color: $text-secondary-contrast; }
+.stopwatch-ready:hover * { color: $text-primary-contrast; }
