--- a/Railway/cinnamon/scss/base/_colors.scss
+++ b/Railway/cinnamon/scss/base/_colors.scss
@@ -8,12 +8,19 @@ $accent-danger:  #ed5d5d;
 
 // Text color
 $text-primary:   rgba(#000, .75);
-$text-secondary: rgba(#000, .45);
+$text-secondary: rgba(#000, .5);
 $text-disabled:  rgba(#000, .20);
 
 $text-primary-invert:   rgba(#fff, 1.0);
 $text-secondary-invert: rgba(#fff, .65);
 $text-disabled-invert:  rgba(#fff, .30);
+
+$text-primary-contrast: $text-primary-invert;
+$text-secondary-contrast: $text-secondary-invert;
+@if(lightness($theme-color) > 60) {
+	$text-primary-contrast: $text-primary;
+	$text-secondary-contrast: $text-secondary;
+}
 
 $text-link:    saturate(darken($accent-info,    10%), 25%);
 $text-success: saturate(darken($accent-success, 18%),  6%);
@@ -21,6 +28,14 @@ $text-info:    saturate(darken($accent-info,    10%), 25%);
 $text-hlight:  saturate(darken($accent-hlight,   4%), 20%);
 $text-danger:  saturate(darken($accent-danger,   6%), 99%);
 
-$border-shape: rgba(#000, .20);
+
+$border-element: rgba(#000, .2);
+
+$accent-element-panel: rgba($theme-color, .75);
+$accent-element: rgba($theme-color, .9);
+@if $opaque-menus {
+	$accent-element: $theme-color;
+}
+
 $hlight-tile:  rgba(#fff, .35);
 $hlight-app:   rgba($accent-hlight, .4);
