--- a/Railway/cinnamon/scss/main/applets/_window-list.scss
+++ b/Railway/cinnamon/scss/main/applets/_window-list.scss
@@ -13,29 +13,29 @@
 		.window-list-item-box { padding: 0; }
 		#appMenuIcon { padding: 8px 0 0 0; }
 	}
+}
 
-	.window-list-item-box {
-		color: $text-primary-invert;
-		border-image: url("img/panel/window-list.svg") 8;
-		text-shadow: 0px 0px 4px 4px rgba(#000, .2);
+.window-list-item-box {
+	color: $text-primary-contrast;
+	border-image: url("img/panel/window-list.svg") 8;
+	text-shadow: 0px 0px 4px 4px rgba(#000, .2);
 
-		background-gradient-direction: vertical;
-		background-gradient-start: transparent;
-		background-gradient-end: transparent;
-		transition-duration: 200;
+	background-gradient-direction: vertical;
+	background-gradient-start: transparent;
+	background-gradient-end: transparent;
+	transition-duration: 200;
 
-		&:hover, &:hover:active, &:hover:checked, &:hover:focus {
-			background-gradient-end: rgba(#fff, .25);
-		}
-
-		&:active, &:checked, &:focus  {
-			border-image: url("img/panel/window-list__active.svg") 8;
-		}
+	&:hover, &:hover:active, &:hover:checked, &:hover:focus {
+		background-gradient-end: rgba(#fff, .25);
 	}
 
-	.window-list-item-demands-attention {
-		border-image: url("img/panel/window-list__atention.svg") 8;
+	&:active, &:checked, &:focus  {
+		border-image: url("img/panel/window-list__active.svg") 8;
 	}
+}
+
+.window-list-item-demands-attention {
+	border-image: url("img/panel/window-list__atention.svg") 8;
 }
 
 /*
@@ -47,9 +47,8 @@
  * anywhere else as the direct child of '#uiGroup'.
  */
 #uiGroup > .switcher-list {
-	border-image: url("img/containers/colored-bg.svg") 7;
-	padding: 8px;
-	color: $text-primary-invert;
+	@include colored-element;
+	color: $text-primary-contrast;
 	font-size: $font-size-base;
 	font-weight: normal;
 
