--- a/Railway/cinnamon/scss/third-party__applets/_weather.scss
+++ b/Railway/cinnamon/scss/third-party__applets/_weather.scss
@@ -5,7 +5,7 @@
 /* Overrides the '.menu' selector */
 .weather-menu {
 	.popup-menu-content {
-		padding-bottom: 8px;
+		padding: 1px;
 	}
 
 	.popup-separator-menu-item {
@@ -20,7 +20,7 @@
 }
 
 .current {
-	padding: 10px 16px;
+	padding: 16px;
 
 	* { padding: 0; }
 }
@@ -71,7 +71,7 @@
 
 .forecast {
 	padding: .8em;
-	border-image: url("img/containers/modal-button-box.svg") 8;
+	border-image: url("img/containers/menu-search__bottom.svg") 3;
 }
 
 .weather-forecast-icon {
