Adjust modal dialogs size

--- a/Railway/cinnamon/cinnamon.css
+++ b/Railway/cinnamon/cinnamon.css
@@ -1173,8 +1173,8 @@ StScrollBar StButton#hhandle:active {
  * ! About Dialog
  * ====================================== */
 .about-content {
-  width: 550px;
-  height: 250px;
+  min-width: 360px;
+  max-width: 520px;
   spacing: 16px;
 }
 
