Add support for window list progress

--- a/Railway/cinnamon/scss/main/applets/_window-list.scss
+++ b/Railway/cinnamon/scss/main/applets/_window-list.scss
@@ -32,6 +32,10 @@
 	&:active, &:checked, &:focus  {
 		border-image: url("img/panel/window-list__active.svg") 8;
 	}
+
+	.progress {
+		border-image: url("img/panel/window-list__progress.svg") 8;
+	}
 }
 
 .window-list-item-demands-attention {
