--- a/Railway/cinnamon/cinnamon.css
+++ b/Railway/cinnamon/cinnamon.css
@@ -1513,6 +1513,10 @@ or .applet-icon,
   border-image: url("img/panel/window-list__active.svg") 8;
 }
 
+.window-list-item-box .progress {
+  border-image: url("img/panel/window-list__progress.svg") 8;
+}
+
 .window-list-item-demands-attention {
   border-image: url("img/panel/window-list__atention.svg") 8;
 }
