Add spacing between icons and labels

--- a/Railway/cinnamon/scss/main/applets/_1-applet-globals.scss
+++ b/Railway/cinnamon/scss/main/applets/_1-applet-globals.scss
@@ -48,6 +48,7 @@ or/* ======================================
 .applet-box {
 	padding: 0 6px;
 	color: $text-primary-contrast;
+	spacing: 4px;
 
 	&:hover {
 		border-image: url("img/panel/applet__horizontal__hover.svg") 10;
