--- a/Railway/cinnamon/scss/base/_colors.scss
+++ b/Railway/cinnamon/scss/base/_colors.scss
@@ -17,7 +17,7 @@ $text-disabled-invert:  rgba(#fff, .30);
 
 $text-primary-contrast: $text-primary-invert;
 $text-secondary-contrast: $text-secondary-invert;
-@if(lightness($theme-color) > 55) {
+@if(normalized-lightness($theme-color) > .6) {
 	$text-primary-contrast: $text-primary;
 	$text-secondary-contrast: $text-secondary;
 }
