--- a/Railway/cinnamon/scss/main/_popup-menus.scss
+++ b/Railway/cinnamon/scss/main/_popup-menus.scss
@@ -12,6 +12,7 @@
 	border-image: url("img/containers/inner-bg.svg") 3;
 	padding: 7px 1px;
 	min-width: 64px;
+	font-size: $font-size-base;
 }
 
 .popup-menu-icon {
