--- a/Railway/cinnamon/scss/main/_hot-corners.scss
+++ b/Railway/cinnamon/scss/main/_hot-corners.scss
@@ -3,7 +3,6 @@
  * ====================================== */
 
 .ripple-box {
-	width: 48px;
-	height: 48px;
+	@include size(48px);
 	background-image: url("img/misc/corner-ripple.svg");
 }
