--- a/Railway/cinnamon/scss/third-party__desklets/_calculator.scss
+++ b/Railway/cinnamon/scss/third-party__desklets/_calculator.scss
@@ -4,7 +4,7 @@
 
 .calc-mainBox {
 	padding: 0;
-	spacing: 7px;
+	spacing: 6px;
 }
 
 .calc-displayArea {
@@ -75,10 +75,16 @@
 }
 
 .calc-button {
-	@include btn-primary;
-	@include size(3.8em, 3em);
+	margin: 0px;
+	padding: 0px;
+	border: 0;
+	border-image: url("img/containers/hover-transparent.svg") 9;
 
 	&-padding {
-		padding: .1em;
+		padding: 0px;
+	}
+
+	StIcon {
+		color: $text-primary-contrast;
 	}
 }
