Fix small text on subitems

--- a/Railway/cinnamon/scss/main/_modal-dialogs.scss
+++ b/Railway/cinnamon/scss/main/_modal-dialogs.scss
@@ -33,7 +33,7 @@
 	&-button {
 		@include btn-primary;
 		@include btn-size("wide");
-		font-size: round($font-size-base*1.05);
+		font-size: 100%;
 	}
 }
 
