--- a/Railway/cinnamon/scss/main/controls/_buttons.scss
+++ b/Railway/cinnamon/scss/main/controls/_buttons.scss
@@ -11,7 +11,7 @@
 	border-width: 0;
 	border-radius: 0;
 
-	font-size: $font-size-base;
+	font-size: 100%;
 
 	StIcon {
 		icon-size: 16px !important;
